# core_module_1_individual_health_wellness_with_data_sovereignty_core_api

./: #.env#  .#.env  .gitignore  README.md  pyproject.toml
.claude/: settings.local.json
src/core_module_1_individual_health_wellness_with_data_sovereignty_core_api_for_all_modules/: crew.py  main.py
src/core_module_1_individual_health_wellness_with_data_sovereignty_core_api_for_all_modules/config/: agents.yaml  tasks.yaml
src/core_module_1_individual_health_wellness_with_data_sovereignty_core_api_for_all_modules/tools/: health_data_analytics.py  intervention_effectiveness_tracker.py  sleep_quality_analytics.py
